# nu_plugin_formats

./: Cargo.toml  README.md
missing_examples/: README.md  eml.rs  ics.rs  ini.rs  vcf.rs
src/: lib.rs
src/from/: edn.rs  eml.rs  ics.rs  ini.rs  mod.rs  vcf.rs
tests/: ini.rs  lib.rs
