[package]
name = "nu_plugin_formats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = { version = "0.75" }
nu-protocol = { version = "0.75" }
nu-engine = { version = "0.75" }
eml-parser = "0.1.0"
indexmap = "1.7"
