[package]
name = "nu_plugin_formats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.75"
nu-protocol = "0.75"
nu-engine = "0.75"
indexmap = { version = "1.7", features = ["serde-1"] }

eml-parser = "0.1.0"
ical = "0.7.0"
serde_ini = "0.2.0"

[dev-dependencies]
nu-test-support = "0.75"
tempfile = "3.2.0"
nu-path = "0.75"
